# wisdom-bot

./: Cargo.toml  LICENSE  Procfile  README.md  rust-toolchain
src/: main.rs  youtube.rs  youtube_api.rs
src/discord/: mod.rs  wisdom_bot.rs
src/discord/wisdom_bot/: args.rs  chan.rs
